# mandelbrot

./: .gitignore  .travis.yml  Cargo.toml  README.md  interesting_regions.txt
src/: lib.rs  main.rs
