[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Ryan Carins <ryan.carins@riscy.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"

[dependencies]
argparse = "0.2.2"
image = "0.24"
pbr = "1.1.1"
ocl = "0.19.4"
rocket = "0.5.0-rc.3"
base64 = "0.21.0"
vulkano = "0.33"
vulkano-shaders = "0.33"
bytemuck = "1.13.1"